--- a/Timesheets/Views/Departments/Create.cshtml
+++ b/Timesheets/Views/Departments/Create.cshtml
@@ -27,7 +27,7 @@
         <div class="container-fluid">
             <div class="row">
                 <!-- left column -->
-                <div class="col-12">
+                <div class="col-xl-10 offset-xl-1">
                     <!-- general form elements -->
                     <div class="card card-primary">
                         <div class="card-header">
