--- a/Timesheets/Views/Projects/Details.cshtml
+++ b/Timesheets/Views/Projects/Details.cshtml
@@ -5,33 +5,62 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>Details</h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a asp-action="Index">Home</a></li>
+                        <li class="breadcrumb-item active">Project Details</li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
 
-<div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Project.Name)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Project.Name)
-        </dd>
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Project.OwnerDepartment)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Project.OwnerDepartment.Name)
-        </dd>
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Project.RelatedDepartments)
-        </dt>
-        <dd class="col-sm-9">
-            @(string.Join(", ", Model.RelatedDepartments.Select(d => d.Name)));
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Project.ProjectId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- left column -->
+                <div class="col-xl-10 offset-xl-1">
+                    <!-- general form elements -->
+                    <div class="card card-info">
+                        <div class="card-header">
+                            <h3 class="card-title">Project Details</h3>
+                        </div>
+                        <div class="card-body">
+                            <dl class="row">
+                                <dt class="col-sm-3">
+                                    @Html.DisplayNameFor(model => model.Project.Name)
+                                </dt>
+                                <dd class="col-sm-9">
+                                    @Html.DisplayFor(model => model.Project.Name)
+                                </dd>
+                                <dt class="col-sm-3">
+                                    @Html.DisplayNameFor(model => model.Project.OwnerDepartment)
+                                </dt>
+                                <dd class="col-sm-9">
+                                    @Html.DisplayFor(model => model.Project.OwnerDepartment.Name)
+                                </dd>
+                                <dt class="col-sm-3">
+                                    @Html.DisplayNameFor(model => model.Project.RelatedDepartments)
+                                </dt>
+                                <dd class="col-sm-9">
+                                    @(string.Join(", ", Model.RelatedDepartments.Select(d => d.Name)));
+                                </dd>
+                            </dl>
+                            <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Project.ProjectId">Edit</a>
+                            <a class="btn btn-secondary" asp-action="Index">Back to Projects</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.card -->
+            </div>
+        </div>
+    </section>
 </div>
