--- a/Timesheets/Views/TimesheetEntries/Edit.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Edit.cshtml
@@ -4,45 +4,70 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>TimesheetEntry</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="TimesheetEntryId" />
-            <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>Edit</h1>
+                    </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a asp-action="Index">Home</a></li>
+                            <li class="breadcrumb-item active">Edit Timesheet Entry</li>
+                        </ol>
+                    </div>
+                </div>
+            </div><!-- /.container-fluid -->
+        </section>
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <!-- left column -->
+                    <div class="col-xl-10 offset-xl-1">
+                        <!-- general form elements -->
+                        <div class="card card-primary">
+                            <div class="card-header">
+                                <h3 class="card-title">Edit a Timesheet Entry</h3>
+                            </div>
+                            <form asp-action="Edit">
+                                <div class="card-body">
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <input type="hidden" asp-for="TimesheetEntryId" />
+                                    <div class="form-group">
+                                        <label asp-for="DateCreated" class="control-label"></label>
+                                        <input asp-for="DateCreated" class="form-control" />
+                                        <span asp-validation-for="DateCreated" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="HoursWorked" class="control-label"></label>
+                                        <input asp-for="HoursWorked" class="form-control" />
+                                        <span asp-validation-for="HoursWorked" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="User" class="control-label"></label>
+                                        <select asp-for="UserId" asp-items="ViewBag.ApplicationUsers" class="form-control" required></select>
+                                        <span asp-validation-for="UserId" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="Project" class="control-label"></label>
+                                        <select asp-for="ProjectId" asp-items="ViewBag.Projects" class="form-control" required></select>
+                                        <span asp-validation-for="ProjectId" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="submit" value="Save" class="btn btn-primary" />
+                                        <a class="btn btn-secondary" asp-action="Index">Back to Timesheet Entries</a>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="HoursWorked" class="control-label"></label>
-                <input asp-for="HoursWorked" class="form-control" />
-                <span asp-validation-for="HoursWorked" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User" class="control-label"></label>
-                <select asp-for="UserId" asp-items="ViewBag.ApplicationUsers" class="form-control" required></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Project" class="control-label"></label>
-                <select asp-for="ProjectId" asp-items="ViewBag.Projects" class="form-control" required></select>
-                <span asp-validation-for="ProjectId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </section>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
