--- a/Timesheets/Views/TimesheetEntries/Index.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Index.cshtml
@@ -4,50 +4,78 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>Timesheet Entries</h1>
+                    </div>
+                </div>
+            </div><!-- /.container-fluid -->
+        </section>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.DateCreated)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoursWorked)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Project)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateCreated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoursWorked)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.FirstName)  @Html.DisplayFor(modelItem => item.User.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Project.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.TimesheetEntryId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TimesheetEntryId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TimesheetEntryId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        <section class="content">
+            <div class="row">
+                <div class="col-xl-10 offset-xl-1">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="card-title">Timesheet Entries</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body p-0">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.DateCreated)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.HoursWorked)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.User)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Project)
+                                        </th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.DateCreated)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.HoursWorked)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.User.FirstName)  @Html.DisplayFor(modelItem => item.User.LastName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Project.Name)
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-primary fa fa-pen font-weight-bold" asp-action="Edit" asp-route-id="@item.TimesheetEntryId"></a>
+                                                <a class="btn btn-info fa fa-eye font-weight-bold" asp-action="Details" asp-route-id="@item.TimesheetEntryId"></a>
+                                                <a class="btn btn-danger fa fa-trash-alt font-weight-bold" asp-action="Delete" asp-route-id="@item.TimesheetEntryId"></a>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- /.card-body -->
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-10 offset-xl-1">
+                    <a class="btn btn-primary" asp-action="Create">Create New</a>
+                </div>
+            </div>
+        </section>
+    </div>
